# rs-wordle-solver

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: rust-bin.yml  rust-build-test.yml  rust-lib.yml
data/: 100-improved-words-shuffled.txt  1000-improved-words-shuffled.txt  1000-wordle-words-shuffled.txt  improved-words.txt
lib/: BUCK  Cargo.toml
lib/benches/: data_bench.rs  engine_bench.rs  restrictions_bench.rs  results_bench.rs
lib/data/: all-words-sorted.txt
lib/src/: data.rs  engine.rs  lib.rs  restrictions.rs  results.rs  scorers.rs  trie.rs
lib/tests/: data_test.rs  engine_test.rs  results_test.rs  scorers_test.rs  serde_test.rs
serde_tests/: Cargo.toml
serde_tests/src/: lib.rs
toolchains/: BUCK
