[package]
authors = [
    "MorganR <roffmorgan@gmail.com>",
]
description = "A library for communicating with common sensors and peripherals. Avoids the std library, and uses async operations where possible."
edition = "2021"
keywords = ["wordle", "solver", "puzzle", "puzzles", "solution"]
name = "wordle-solver"
readme = "README.md"
repository = "https://github.com/MorganR/wordle-solver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
