[package]
authors = [
    "Morgan Roff <roffmorgan@gmail.com>",
]
description = "A library for solving Wordle-style puzzles. It provides multiple guessing algorithms, as well as building blocks for implementing your own Wordle solving algorithms."
edition = "2021"
keywords = ["wordle", "solver", "puzzle", "solution", "word", "game", "guess", "guesser", "solve"]
name = "rs-wordle-solver"
readme = "../README.md"
repository = "https://github.com/MorganR/rs-wordle-solver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dev-dependencies]
assert_matches = "1.5.0"