[package]
version.workspace = true
authors.workspace = true
name = "rs-wordle-solver"
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde"]

[dependencies]
rand = "0.8.5"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["rc", "derive"], optional=true }

[dev-dependencies]
assert_matches = "1.5.0"
